calico-enterprise_versioned_docs/version-3.14/compliance/encrypt-cluster-pod-traffic.mdx
---
description: Enable WireGuard for state-of-the-art cryptographic security between pods for Calico Enterprise clusters.
---

# Encrypt data in transit

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Big picture

Enable WireGuard to secure on the wire in-cluster pod traffic in a {{prodname}} cluster.

## Value

When this feature is enabled, {{prodname}} automatically creates and manages WireGuard tunnels between nodes providing transport-level security for inter-node, in-cluster pod traffic. WireGuard provides [formally verified](https://www.wireguard.com/formal-verification/) secure and [performant tunnels](https://www.wireguard.com/performance/) without any specialized hardware. For a deep dive in to WireGuard implementation, see this [whitepaper](https://www.wireguard.com/papers/wireguard.pdf).

## Concepts

### About WireGuard

{{prodname}} supports encryption for both inter-node pod traffic, and inter-node, host-network traffic. Because {{prodname}} is not implemented using a sidecar, traffic is not encrypted for the full journey from one pod to another; traffic is only encrypted on the host-to-host portion of the journey.  Though there is unencrypted traffic between the host-to-pod portion of the journey, attackers cannot easily intercept this traffic. To intercept the unencrypted traffic, they would need root access to the node.

{{prodname}} supports WireGuard encryption for both IPv4 and IPv6 traffic. You can enable traffic independently using parameters in the FelixConfiguration resource:

- `wireguardEnabled` - enables encrypting IPv4 traffic over an IPv4 underlay network
- `wireguardEnabledV6` - enables encrypting IPv6 traffic over an IPv6 underlay network

## Features

This how-to guide uses the following {{prodname}} features:

- **Felix configuration resource** with WireGuard configuration parameters

## Before you begin

**Terminology**

 - Inter-node pod traffic: Traffic leaving a pod from one node destined to a pod on another node
 - Inter-node, host-network traffic: traffic generated by the node itself or a host-networked-pod destined to another node or host-networked-pod
 - Same-node pod traffic: Traffic between pods on the same node

**Unsupported**

- GKE
- Using your own custom keys to encrypt traffic

**Limitations**

- IPv4 only
- EKS, only with AWS CNI
- AKS, only with Azure CNI

**Supported encryption**

- Inter-node pod traffic
- Inter-node host-network traffic is only encrypted on managed clusters deployed on EKS (AWS CNI) and AKS (Azure CNI).

**Required**

- On all nodes in the cluster that you want to participate in {{prodname}} encryption, verify that the operating system(s) on the nodes are [installed with WireGuard](https://www.wireguard.com/install/).

  :::note

  Some node operating systems do not support WireGuard, or do not have it installed by default. Enabling {{prodname}} WireGuard encryption does not require all nodes to be installed with WireGuard. However, traffic to or from a node that does not have WireGuard installed, will not be encrypted.

  :::

- IP addresses for every node in the cluster. This is required to establish secure tunnels between the nodes. {{prodname}} can automatically do this using [IP autodetection methods](../networking/ipam/ip-autodetection.mdx).

## How to

- [Install WireGuard](#install-wireguard)
- [Enable WireGuard for a cluster](#enable-wireguard-for-a-cluster)
- [Verify encryption is enabled](#verify-encryption-is-enabled)
- [Enable WireGuard statistics](#enable-wireguard-statistics)
- [View WireGuard statistics](#view-wireguard-statistics)
- [Disable WireGuard for an individual node](#disable-wireguard-for-an-individual-node)
- [Disable WireGuard for a cluster](#disable-wireguard-for-a-cluster)

### Install WireGuard

WireGuard is included in Linux 5.6+ kernels, and has been backported to earlier Linux kernels in some Linux distributions.

Install WireGuard on cluster nodes using [instructions for your operating system](https://www.wireguard.com/install/). Note that you may need to reboot your nodes after installing WireGuard to make the kernel modules available on your system.

Use the following instructions for these platforms that are not listed on the WireGuard installation page, before proceeding to [enabling WireGuard](#enable-wireguard-for-a-cluster).

<Tabs>
<TabItem label="EKS" value="EKS-0">

To install WireGuard on the default Amazon Machine Image (AMI):

```bash
sudo yum install kernel-devel-`uname -r` -y
sudo yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm -y
sudo curl -o /etc/yum.repos.d/jdoss-wireguard-epel-7.repo https://copr.fedorainfracloud.org/coprs/jdoss/wireguard/repo/epel-7/jdoss-wireguard-epel-7.repo
sudo yum install wireguard-dkms wireguard-tools -y
```

</TabItem>
<TabItem label="AKS" value="AKS-1">

AKS cluster nodes run Ubuntu with a kernel that has WireGuard installed already, so there is no manual installation required.

</TabItem>
<TabItem label="OpenShift" value="OpenShift-2">

To install WireGuard for OpenShift v4.8:

1.  Install requirements:

    - [CoreOS Butane](https://coreos.github.io/butane/getting-started/)
    - [Openshift CLI](https://docs.openshift.com/container-platform/4.2/cli_reference/openshift_cli/getting-started-cli.html)

1.  Download and configure the tools needed for kmods.

```bash
FAKEROOT=$(mktemp -d)
git clone https://github.com/tigera/kmods-via-containers
cd kmods-via-containers
make install FAKEROOT=${FAKEROOT}
cd ..
git clone https://github.com/tigera/kvc-wireguard-kmod
cd kvc-wireguard-kmod
make install FAKEROOT=${FAKEROOT}
cd ..
```

1.  Configure/edit `${FAKEROOT}/root/etc/kvc/wireguard-kmod.conf`.

    a. You must then set the URLs for the `KERNEL_CORE_RPM`, `KERNEL_DEVEL_RPM` and `KERNEL_MODULES_RPM` packages in the conf file `$FAKEROOT/etc/kvc/wireguard-kmod.conf`. Obtain copies for `kernel-core`, `kernel-devel`, and `kernel-modules` rpms from [RedHat Access](https://access.redhat.com/downloads/content/package-browser) and host it in an http file server that is reachable by your OCP workers.

    b. For help configuring `kvc-wireguard-kmod/wireguard-kmod.conf` and WireGuard version to kernel version compatibility, see the [kvc-wireguard-kmod README file](https://github.com/tigera/kvc-wireguard-kmod#quick-config-variables-guide).

1.  Get RHEL Entitlement data from your own RHEL8 system from a host in your cluster.

    ```bash
    tar -czf subs.tar.gz /etc/pki/entitlement/ /etc/rhsm/ /etc/yum.repos.d/redhat.repo
    ```

    Please refer to Openshift [documentation](https://access.redhat.com/documentation/en-us/red_hat_subscription_management/1/html-single/rhsm/index#reg-cli) for more information about these entitlement files.

1.  Copy the `subs.tar.gz` file to your workspace and then extract the contents using the following command.

    ```bash
    tar -x -C ${FAKEROOT}/root -f subs.tar.gz
    ```

1.  Transpile your machine config using [CoreOS Butane](https://coreos.github.io/butane/getting-started/).

    ```bash
    cd kvc-wireguard-kmod
    make ignition FAKEROOT=${FAKEROOT} > mc-wg.yaml
    ```

1.  With the KUBECONFIG set for your cluster, run the following command to apply the MachineConfig which will install WireGuard across your cluster.
    ```bash
    oc create -f mc-wg.yaml
    ```

</TabItem>
</Tabs>

### Enable WireGuard for a cluster

Enable WireGuard encryption across all the nodes using the following command.

```bash
kubectl patch felixconfiguration default --type='merge' -p '{"spec":{"wireguardEnabled":true}}'
```

For OpenShift, add the Felix configuration with WireGuard enabled [under custom resources](../getting-started/install-on-clusters/openshift/installation/index.mdx#provide-additional-configuration).

:::note

The above command can be used to change other WireGuard attributes. For a list of other WireGuard parameters and configuration evaluation, see the [Felix configuration](../reference/resources/felixconfig.mdx#felix-configuration-definition).

:::

We recommend that you review and modify the MTU used by {{prodname}} networking when WireGuard is enabled to increase network performance. Follow the instructions in the [Configure MTU to maximize network performance](../networking/configuring/mtu.mdx) guide to set the MTU to a value appropriate for your network.

### Verify encryption is enabled

To verify that the nodes are configured for WireGuard encryption, check the node status set by Felix using `kubectl`. For example:

```bash
kubectl get node <NODE-NAME> -o yaml
...
kind: Node
metadata:
  annotations:
    projectcalico.org/WireguardPublicKey: jlkVyQYooZYzI2wFfNhSZez5eWh44yfq1wKVjLvSXgY=
...
```

### Enable WireGuard statistics

Since v3.11.1, WireGuard statistics are now automatically enabled with the enable wireguard setting(s) mentioned above.

### View WireGuard statistics

To view WireGuard statistics in Manager UI, you must enable them. From the left navbar, click **Dashboard**, and the Layout Settings icon.

![Wireguard Dashboard Toggle](/img/calico-enterprise/wireguard/stats-toggle.png)

#### WireGuard Dashboard toggle

When viewing WireGuard statistics, you might wonder why the charts in the Manager UI Dashboard show more ingress traffic than egress if all the traffic goes within the cluster. The chart might show a 1% difference between traffic for the following reasons:

- Sampling time. The statistics are generated a few microseconds apart.
- Packet loss. If a node resends a lost packet, then the node counts the packet twice where the receiver counts it only once.
- Averaging/smoothing. The statistics are smoothed out over a few seconds.

### Disable WireGuard for an individual node

To disable WireGuard on a specific node with WireGuard installed, modify the node-specific Felix configuration. e.g., to turn off encryption for pod traffic on node `my-node`, use the following command:

```bash
cat <<EOF | kubectl apply -f -
apiVersion: projectcalico.org/v3
kind: FelixConfiguration
metadata:
  name: node.my-node
spec:
  logSeverityScreen: Info
  reportingInterval: 0s
  wireguardEnabled: false
EOF
```

With the above command, Calico will not encrypt any of the pod traffic to or from node `my-node`.

To enable WireGuard on node `my-node` again:

```bash
kubectl patch felixconfiguration node.my-node --type='merge' -p '{"spec":{"wireguardEnabled":true}}'
```

### Disable WireGuard for a cluster

To disable WireGuard on all nodes modify the default Felix configuration. For example:

```bash
kubectl patch felixconfiguration default --type='merge' -p '{"spec":{"wireguardEnabled":false}}'
```

## Additional resources

- [Secure {{prodname}} component communications](../operations/comms/index.mdx)
- [Configure MTU to maximize network performance](../networking/configuring/mtu.mdx)
